# MemFlow

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  memflow.py  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md  __init__.py  install_benchmark.py
benchmark/proced_mem_bench/: README.md  __init__.py  adapter.py  evaluation.py  run_proced_mem_bench.py
benchmark/skill_ret_bench/: README.md  __init__.py  adapter.py  evaluation.py  run_retrieval.py  run_seeding.py  run_skill_ret_bench.py
benchmark/wikihow_procedure_silver/: DATA_LICENSE.md  NOTICE.md  README.md  __init__.py  adapter.py  build_wikihow_procedures.py  evaluation.py  run_retrieval.py  run_seeding.py  run_wikihow_procedure_silver.py
benchmark/wikihow_procedure_silver/assets/: category_aliases.json
benchmark/wikihow_procedure_silver/benchmark_data/: query_bank.jsonl
examples/: 01_quickstart.py  02_search.py  03_explicit_extraction.py  04_full_flow.py  05_classification.py  06_file_persistence.py  07_memmachine.py  08_plan.py  09_execute.py  09_run.py  10_coding_agent.py  10_run.py  11_coding_agent.py  12_multi_stage_plan.py  13_agentic_loop.py  14_multi_intent.py  README.md  utils.py
memflow/: __init__.py  claude_catalog.py  claude_hook.py  claude_setup.py  cli.py  executor.py  learner.py  llm.py  manager.py  models.py  planner.py  prompts.py  skill_context.py  skills.py  store.py
scripts/: docker-compose.pgvector.yml  docker-compose.vectordb.yml  pgvector.sh  vectordb.sh
tests/: __init__.py  conftest.py  test_benchmark_adapter.py  test_claude_catalog.py  test_claude_hook.py  test_claude_setup.py  test_cli.py  test_executor.py  test_learner.py  test_llm.py  test_manager.py  test_models.py  test_planner.py  test_skills.py  test_store.py  test_wikihow_procedure_silver.py
(+6 files in other folders)
