[project]
name = "memflow"
version = "0.1.0"
description = "Procedural Memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "ruff>=0.15.12",
]

[project.optional-dependencies]
benchmark = ["kaggle>=1.6.0"]
ollama = ["ollama>=0.6.1"]
memmachine = ["memmachine-client>=0.3.0"]
openai = ["openai>=2.30.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
